src/antlr4/grammar/Yaappu/VenbaParser.java
// Generated from grammar/Yaappu/Venba.g4 by ANTLR 4.5.1

    package grammar.Yaappu;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class VenbaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MEI=1, UYIR_MEI_OU=2, UYIR_MEI_OA=3, UYIR_MEI_O=4, UYIR_MEI_AI=5, UYIR_MEI_AE=6, 
		UYIR_MEI_E=7, UYIR_MEI_OO=8, UYIR_MEI_U=9, UYIR_MEI_EE=10, UYIR_MEI_I=11, 
		UYIR_MEI_AA=12, UYIR_MEI_A=13, A_UYIR=14, AA_UYIR=15, I_UYIR=16, EE_UYIR=17, 
		U_UYIR=18, OO_UYIR=19, E_UYIR=20, AE_UYIR=21, AI_UYIR=22, O_UYIR=23, OA_UYIR=24, 
		OU_UYIR=25, AAYTHAM=26, PULLI=27, KAAL=28, SULI=29, NEDIL_SULI=30, U_KURIL=31, 
		U_NEDIL=32, EA_KURIL=33, EA_NEDIL=34, I=35, O_KURIL=36, O_NEDIL=37, OU=38, 
		NEWLINE=39, WS=40;
	public static final int
		RULE_venpa = 0, RULE_adi = 1, RULE_eetradi = 2, RULE_seer = 3, RULE_moovasai = 4, 
		RULE_eerasai = 5, RULE_themangai = 6, RULE_themangani = 7, RULE_pulimangai = 8, 
		RULE_pulimangani = 9, RULE_koovilangai = 10, RULE_koovilangani = 11, RULE_karuvilangai = 12, 
		RULE_karuvilangani = 13, RULE_thema = 14, RULE_pulima = 15, RULE_koovilam = 16, 
		RULE_karuvilam = 17, RULE_eetru_seer = 18, RULE_nirai_asai = 19, RULE_ner_asai = 20, 
		RULE_kuril = 21, RULE_nedil = 22, RULE_otru = 23;
	public static final String[] ruleNames = {
		"venpa", "adi", "eetradi", "seer", "moovasai", "eerasai", "themangai", 
		"themangani", "pulimangai", "pulimangani", "koovilangai", "koovilangani", 
		"karuvilangai", "karuvilangani", "thema", "pulima", "koovilam", "karuvilam", 
		"eetru_seer", "nirai_asai", "ner_asai", "kuril", "nedil", "otru"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "'\\u0B85'", "'\\u0B86'", "'\\u0B87'", "'\\u0B88'", "'\\u0B89'", 
		"'\\u0B8A'", "'\\u0B8E'", "'\\u0B8F'", "'\\u0B90'", "'\\u0B92'", "'\\u0B93'", 
		"'\\u0B94'", "'\\u0B83'", "'\\u0BCD'", "'\\u0BBE'", "'\\u0BBF'", "'\\u0BC0'", 
		"'\\u0BC1'", "'\\u0BC2'", "'\\u0BC6'", "'\\u0BC7'", "'\\u0BC8'", "'\\u0BCA'", 
		"'\\u0BCB'", "'\\u0BCC'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "MEI", "UYIR_MEI_OU", "UYIR_MEI_OA", "UYIR_MEI_O", "UYIR_MEI_AI", 
		"UYIR_MEI_AE", "UYIR_MEI_E", "UYIR_MEI_OO", "UYIR_MEI_U", "UYIR_MEI_EE", 
		"UYIR_MEI_I", "UYIR_MEI_AA", "UYIR_MEI_A", "A_UYIR", "AA_UYIR", "I_UYIR", 
		"EE_UYIR", "U_UYIR", "OO_UYIR", "E_UYIR", "AE_UYIR", "AI_UYIR", "O_UYIR", 
		"OA_UYIR", "OU_UYIR", "AAYTHAM", "PULLI", "KAAL", "SULI", "NEDIL_SULI", 
		"U_KURIL", "U_NEDIL", "EA_KURIL", "EA_NEDIL", "I", "O_KURIL", "O_NEDIL", 
		"OU", "NEWLINE", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Venba.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public VenbaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class VenpaContext extends ParserRuleContext {
		public EetradiContext eetradi() {
			return getRuleContext(EetradiContext.class,0);
		}
		public List<AdiContext> adi() {
			return getRuleContexts(AdiContext.class);
		}
		public AdiContext adi(int i) {
			return getRuleContext(AdiContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(VenbaParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(VenbaParser.NEWLINE, i);
		}
		public VenpaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_venpa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).enterVenpa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).exitVenpa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VenbaVisitor ) return ((VenbaVisitor<? extends T>)visitor).visitVenpa(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VenpaContext venpa() throws RecognitionException {
		VenpaContext _localctx = new VenpaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_venpa);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(51); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(48);
					adi();
					setState(49);
					match(NEWLINE);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(53); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(55);
			eetradi();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AdiContext extends ParserRuleContext {
		public List<SeerContext> seer() {
			return getRuleContexts(SeerContext.class);
		}
		public SeerContext seer(int i) {
			return getRuleContext(SeerContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(VenbaParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(VenbaParser.WS, i);
		}
		public AdiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_adi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).enterAdi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).exitAdi(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VenbaVisitor ) return ((VenbaVisitor<? extends T>)visitor).visitAdi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdiContext adi() throws RecognitionException {
		AdiContext _localctx = new AdiContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_adi);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			seer();
			setState(58);
			match(WS);
			setState(59);
			seer();
			setState(60);
			match(WS);
			setState(61);
			seer();
			setState(62);
			match(WS);
			setState(63);
			seer();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EetradiContext extends ParserRuleContext {
		public List<SeerContext> seer() {
			return getRuleContexts(SeerContext.class);
		}
		public SeerContext seer(int i) {
			return getRuleContext(SeerContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(VenbaParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(VenbaParser.WS, i);
		}
		public Eetru_seerContext eetru_seer() {
			return getRuleContext(Eetru_seerContext.class,0);
		}
		public EetradiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eetradi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).enterEetradi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).exitEetradi(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VenbaVisitor ) return ((VenbaVisitor<? extends T>)visitor).visitEetradi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EetradiContext eetradi() throws RecognitionException {
		EetradiContext _localctx = new EetradiContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_eetradi);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			seer();
			setState(66);
			match(WS);
			setState(67);
			seer();
			setState(68);
			match(WS);
			setState(69);
			eetru_seer();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SeerContext extends ParserRuleContext {
		public EerasaiContext eerasai() {
			return getRuleContext(EerasaiContext.class,0);
		}
		public MoovasaiContext moovasai() {
			return getRuleContext(MoovasaiContext.class,0);
		}
		public SeerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).enterSeer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).exitSeer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VenbaVisitor ) return ((VenbaVisitor<? extends T>)visitor).visitSeer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeerContext seer() throws RecognitionException {
		SeerContext _localctx = new SeerContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_seer);
		try {
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				eerasai();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				moovasai();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoovasaiContext extends ParserRuleContext {
		public ThemangaiContext themangai() {
			return getRuleContext(ThemangaiContext.class,0);
		}
		public PulimangaiContext pulimangai() {
			return getRuleContext(PulimangaiContext.class,0);
		}
		public KoovilangaiContext koovilangai() {
			return getRuleContext(KoovilangaiContext.class,0);
		}
		public KaruvilangaiContext karuvilangai() {
			return getRuleContext(KaruvilangaiContext.class,0);
		}
		public ThemanganiContext themangani() {
			return getRuleContext(ThemanganiContext.class,0);
		}
		public PulimanganiContext pulimangani() {
			return getRuleContext(PulimanganiContext.class,0);
		}
		public KoovilanganiContext koovilangani() {
			return getRuleContext(KoovilanganiContext.class,0);
		}
		public KaruvilanganiContext karuvilangani() {
			return getRuleContext(KaruvilanganiContext.class,0);
		}
		public MoovasaiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moovasai; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).enterMoovasai(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).exitMoovasai(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VenbaVisitor ) return ((VenbaVisitor<? extends T>)visitor).visitMoovasai(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MoovasaiContext moovasai() throws RecognitionException {
		MoovasaiContext _localctx = new MoovasaiContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_moovasai);
		try {
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				themangai();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				pulimangai();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(77);
				koovilangai();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(78);
				karuvilangai();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(79);
				themangani();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(80);
				pulimangani();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(81);
				koovilangani();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(82);
				karuvilangani();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EerasaiContext extends ParserRuleContext {
		public KaruvilamContext karuvilam() {
			return getRuleContext(KaruvilamContext.class,0);
		}
		public PulimaContext pulima() {
			return getRuleContext(PulimaContext.class,0);
		}
		public KoovilamContext koovilam() {
			return getRuleContext(KoovilamContext.class,0);
		}
		public ThemaContext thema() {
			return getRuleContext(ThemaContext.class,0);
		}
		public EerasaiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eerasai; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).enterEerasai(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).exitEerasai(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VenbaVisitor ) return ((VenbaVisitor<? extends T>)visitor).visitEerasai(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EerasaiContext eerasai() throws RecognitionException {
		EerasaiContext _localctx = new EerasaiContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_eerasai);
		try {
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				karuvilam();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				pulima();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				koovilam();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(88);
				thema();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThemangaiContext extends ParserRuleContext {
		public ThemaContext thema() {
			return getRuleContext(ThemaContext.class,0);
		}
		public Ner_asaiContext ner_asai() {
			return getRuleContext(Ner_asaiContext.class,0);
		}
		public ThemangaiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_themangai; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).enterThemangai(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).exitThemangai(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VenbaVisitor ) return ((VenbaVisitor<? extends T>)visitor).visitThemangai(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ThemangaiContext themangai() throws RecognitionException {
		ThemangaiContext _localctx = new ThemangaiContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_themangai);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			thema();
			setState(92);
			ner_asai();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThemanganiContext extends ParserRuleContext {
		public ThemaContext thema() {
			return getRuleContext(ThemaContext.class,0);
		}
		public Nirai_asaiContext nirai_asai() {
			return getRuleContext(Nirai_asaiContext.class,0);
		}
		public ThemanganiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_themangani; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).enterThemangani(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).exitThemangani(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VenbaVisitor ) return ((VenbaVisitor<? extends T>)visitor).visitThemangani(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ThemanganiContext themangani() throws RecognitionException {
		ThemanganiContext _localctx = new ThemanganiContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_themangani);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			thema();
			setState(95);
			nirai_asai();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PulimangaiContext extends ParserRuleContext {
		public PulimaContext pulima() {
			return getRuleContext(PulimaContext.class,0);
		}
		public Ner_asaiContext ner_asai() {
			return getRuleContext(Ner_asaiContext.class,0);
		}
		public PulimangaiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pulimangai; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).enterPulimangai(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).exitPulimangai(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VenbaVisitor ) return ((VenbaVisitor<? extends T>)visitor).visitPulimangai(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PulimangaiContext pulimangai() throws RecognitionException {
		PulimangaiContext _localctx = new PulimangaiContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_pulimangai);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			pulima();
			setState(98);
			ner_asai();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PulimanganiContext extends ParserRuleContext {
		public PulimaContext pulima() {
			return getRuleContext(PulimaContext.class,0);
		}
		public Nirai_asaiContext nirai_asai() {
			return getRuleContext(Nirai_asaiContext.class,0);
		}
		public PulimanganiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pulimangani; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).enterPulimangani(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).exitPulimangani(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VenbaVisitor ) return ((VenbaVisitor<? extends T>)visitor).visitPulimangani(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PulimanganiContext pulimangani() throws RecognitionException {
		PulimanganiContext _localctx = new PulimanganiContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_pulimangani);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			pulima();
			setState(101);
			nirai_asai();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KoovilangaiContext extends ParserRuleContext {
		public KoovilamContext koovilam() {
			return getRuleContext(KoovilamContext.class,0);
		}
		public Ner_asaiContext ner_asai() {
			return getRuleContext(Ner_asaiContext.class,0);
		}
		public KoovilangaiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_koovilangai; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).enterKoovilangai(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).exitKoovilangai(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VenbaVisitor ) return ((VenbaVisitor<? extends T>)visitor).visitKoovilangai(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KoovilangaiContext koovilangai() throws RecognitionException {
		KoovilangaiContext _localctx = new KoovilangaiContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_koovilangai);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			koovilam();
			setState(104);
			ner_asai();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KoovilanganiContext extends ParserRuleContext {
		public KoovilamContext koovilam() {
			return getRuleContext(KoovilamContext.class,0);
		}
		public Nirai_asaiContext nirai_asai() {
			return getRuleContext(Nirai_asaiContext.class,0);
		}
		public KoovilanganiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_koovilangani; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).enterKoovilangani(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).exitKoovilangani(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VenbaVisitor ) return ((VenbaVisitor<? extends T>)visitor).visitKoovilangani(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KoovilanganiContext koovilangani() throws RecognitionException {
		KoovilanganiContext _localctx = new KoovilanganiContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_koovilangani);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			koovilam();
			setState(107);
			nirai_asai();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KaruvilangaiContext extends ParserRuleContext {
		public KaruvilamContext karuvilam() {
			return getRuleContext(KaruvilamContext.class,0);
		}
		public Ner_asaiContext ner_asai() {
			return getRuleContext(Ner_asaiContext.class,0);
		}
		public KaruvilangaiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_karuvilangai; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).enterKaruvilangai(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VenbaListener ) ((VenbaListener)listener).exitKaruvilangai(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VenbaVisitor ) return ((VenbaVisitor<? extends T>)visitor).visitKaruvilangai(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KaruvilangaiContext karuvilangai() throws RecognitionException {
		KaruvilangaiContext _localctx = new KaruvilangaiContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_karuvilangai);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			karuvilam();
			setState(110);
			ner_asai();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
